# sp-rust

./: .gitignore  .pylintrc  .rustfmt.toml  Cargo.toml  README.md
sp-codegen/: Cargo.toml  README.md
sp-codegen/src/: lib.rs  main.rs  ros2_generic.rs  ros2_messages.rs  ros2_messages_common.rs  ros2_messages_model_based.rs  ros2_python.rs  ros2_python_common.rs  ros2_python_model_based.rs  utils.rs
sp-codegen/templates/ros2_messages_common/: cmakelists_template.txt  readme_template.md
sp-codegen/templates/ros2_messages_model_based/: msg_basic_command_mapping_rules_template.yaml  msg_basic_command_template.msg  msg_basic_measured_template.msg  msg_template_interfacer_to_sp.msg  msg_template_sp_to_interfacer.msg
sp-codegen/templates/ros2_msg_package/: description_file_template.xml  msg_template_driver_to_interfacer.msg
sp-codegen/templates/ros2_python/common/: configuration_file_template.cfg  msg_mapping_1to2_rules_template.yaml
sp-codegen/templates/ros2_python/model_based/: basic_emulator_node_template.py  msg_template_sp_to_interfacer.msg
sp-codegen/templates/ros2_python_common/: description_file_template.xml  readme_template.md  setup_file_template.py
sp-codegen/templates/ros2_python_model_based/: basic_emulator_node_template.py  basic_interfacer_node_template.py  basic_simulator_node_template.py  simple_lifecycle_emulator_node_template.py  simple_lifecycle_interfacer_node_template.py
sp-codegen/templates/ros2_python_package/: basic_emulator_node_template.py  basic_tester_node_template.py  setup_file_template.py
sp-codegen/tests/: ros2_python_int_test.rs
sp-domain/: Cargo.toml
sp-domain/examples/: modelling.rs
sp-domain/src/: attributes.rs  idable.rs  ids.rs  instantiations.rs  items.rs  lib.rs  node.rs  operations.rs  paths.rs  predicates.rs  resources.rs  solvers.rs  sops.rs  sp_value.rs  state.rs  states.rs  structures.rs  transition_system_model.rs  transitions.rs  utils.rs  values.rs  variables.rs  z3config.rs  z3context.rs  z3operations.rs  z3optimizer.rs  z3relations.rs  z3solver.rs  z3sorts.rs  z3tools.rs  z3utils.rs  z3values.rs  z3variables.rs
sp-domain/src/predicates/: mod.rs  parser.rs
sp-domain/tests/: common.rs  dsl_testing.rs  macros.rs
sp-examples/cylinders/: Cargo.toml
sp-examples/cylinders/src/: camera.rs  control_box.rs  cylinders.rs  dorna.rs  main.rs  operator.rs
sp-fm/: Cargo.toml
sp-fm/src/: main.rs
sp-formal/: Cargo.toml
sp-formal/src/: lib.rs  sp_fm_api.rs
sp-formal/src/planning/: algorithms.rs  mod.rs
sp-formal/src/planning/nuxmv/: mod.rs  nuxmv_async.rs
sp-model/: Cargo.toml
sp-model/src/: main.rs
sp-model/src/modeling/: global_model.rs  helpers.rs
sp-model/src/planning/: algorithms.rs  mod.rs
sp-model/src/planning/nuxmv/: mod.rs  nuxmv_async.rs
sp-model/src/testing_model/: control_box.rs  cylinders.rs  dorna.rs  gripper.rs  gripper_fail.rs  mod.rs
sp-modeling/: Cargo.toml
sp-modeling/src/: main.rs
sp-modeling/src/modeling/: compile_model.rs  helpers.rs  mod.rs
sp-modeling/src/testing_model/: camera.rs  cylinders.rs  gripper.rs
sp-ros/: Cargo.toml
sp-ros-ws/src/cylinders/dorna/: CMakeLists.txt  package.xml  setup.cfg  setup.py
sp-ros-ws/src/ros2_book_examples/cubes/: CMakeLists.txt  README.md  package.xml
sp-ros-ws/src/ros2_book_examples/cubes_sm/: package.xml  (+5 more)
sp-ros-ws/src/sp_ui/: package.xml
sp-ros/src/: comm.rs  lib.rs  model_service.rs  resource_comm.rs  state_service.rs
sp-runner/: Cargo.toml  build.rs
sp-runner-new/: Cargo.toml
sp-runner-new/src/: lib.rs  sp_runner.rs  sp_threaded_runner.rs  sp_ticker.rs
sp-runner-new/src/modeling/: helpers.rs
sp-runner-new/src/planning/: helpers.rs  mod.rs  nuxmv.rs
sp-runner-new/src/testing/: dummy_robot.rs  dummy_robots.rs  mod.rs
sp-runner/examples/: ros-state.rs
sp-runner/src/: helpers.rs  lib.rs  main.rs  operation_planner.rs  sp_fm_api.rs  sp_node_handler.rs  sp_planning_runner.rs  sp_runner.rs  sp_threaded_runner.rs  sp_ticker.rs  transition_planner.rs
sp-runner/src/formal_model/: mod.rs  tests.rs  transition_system_model.rs
sp-runner/src/modeling/: global_model.rs  helpers.rs  mod.rs  operations.rs
sp-runner/src/planning/: algorithms.rs  mod.rs  nuxmv.rs  sat_planner.rs  z3_planner.rs
sp-runner/src/runners/: helpers.rs  mod.rs  runner.rs
sp-runner/src/streamsupport/: incoming.rs  messagebuffer.rs  mod.rs  outgoing.rs  resource_streams.rs  testing_tokio.rs
sp-runner/src/testing/: cubes.rs  dummy_door.rs  dummy_mecademic.rs  dummy_robot.rs  dummy_robots.rs  dummy_robots_new.rs  dummy_sm.rs  mecademic_robot.rs  mecademic_robots.rs  mod.rs  two_robots.rs
sp-runner/tests/: common.rs  dummy_robot.rs  guard_extraction.rs  htntests.rs  planning.rs  planning_testing.rs  runner_testing.rs
sp-runner/tests/test_models/: dummy_robot.rs  dummy_robots.rs  mod.rs
sp-smt/: Cargo.toml  README.md
sp-smt/examples/: README.md  door.rs  door_event_based_exp.rs  door_exp.rs  door_exp_2.rs  enum_fruits.rs  enum_test.rs  enum_test_2.rs  evalstuff.rs  food_servings.rs  graphs_exp.rs  hardest_sudoku.rs  hierarchical_test_1.rs  lazy_basic.rs  lazy_basic2test.rs  ltltryouts.rs  plan_and_increment.rs  plan_and_increment_2.rs  plan_and_increment_3.rs  planning_exp.rs  plantest1.rs  plantest2.rs  primitive_planning.rs  primitive_planning_1.rs  primitive_planning_2.rs  primitive_planning_3.rs  primitive_planning_4.rs  primitive_planning_5.rs  primitive_planning_6.rs  primitive_planning_7.rs  session_1.rs  session_1_sp.rs  smtlib_exp.rs  smtlib_string.rs  sp_tryouts.rs  sp_tryouts2.rs  sp_tryouts3.rs  space_colonies.rs  three_activities.rs  try_dimacs.rs  (+3 more)
sp-smt/src/: lib.rs  z3config.rs  z3context.rs  z3logics.rs  z3ltl.rs  z3ltlf.rs  z3operations.rs  z3optimizer.rs  z3planning.rs  z3relations.rs  z3solver.rs  z3sorts.rs  z3utils.rs  z3values.rs  z3variables.rs
sp-smt/tests/: config_int_tests.rs  context_int_tests.rs  examples.rs  logics_int_tests.rs  operations_int_tests.rs  optimizer_int_tests.rs  planning_tests.rs  relations_int_tests.rs  solver_int_tests.rs  sorts_int_tests.rs  values_int_tests.rs  variables_int_tests.rs
(+389 files in other folders)
