[package]
name = "sp-codegen"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer.bengtsson@chalmers.se>"]
edition = "2018"

[dependencies]
env_logger = "0.6.2"
log = "0.4.8"
itertools = "0.8.0"
lazy_static = "1.4.0"
askama = "0.8"
dirs = "2.0"
chrono = "0.4.9"
sp-domain = { path = "../sp-domain/" }
sp-runner-api = { path = "../sp-runner-api/" }
sp-runner = { path = "../sp-runner/" }
sp-smt = { path = "../sp-smt/" }