[package]
name = "sp-domain"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer.bengtsson@chalmers.se>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["serde", "v4"] }
nom = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.6.2"
log = "0.4.8"
z3-sys = "0.5.0"
itertools = "0.8.0"
