[package]
name = "sp-domain"
version = "0.1.0"
authors = ["Kristofer Bengtsson <kristofer.bengtsson@chalmers.se>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
peg = "0.6"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3"
