[package]
name = "sp-fm"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp-domain = { path = "../sp-domain/" }
guard_extraction = { git = "https://github.com/m-dahl/guard_extraction.git" }
