[package]
name = "sp-runner"
version = "0.0.1"
authors = ["Kristofer Bengtsson <kristofer@sekvensa.se>"]
edition = "2018"

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
sp-domain = { path = "../sp-domain/" }
sp-runner-api = { path = "../sp-runner-api/" }
sp-ros = { path = "../sp-ros/", features = ["ros"] }
failure = "0.1.6"
failure_derive = "0.1.6"
chrono = { version = "0.4.9", features = ["serde"] }
guard_extraction = { git = "https://github.com/m-dahl/guard_extraction.git", rev = "a1c8121" }
indoc = "0.3"
cryptominisat = { git = "https://github.com/Storyyeller/cryptominisat-rs.git" }

[dev-dependencies]
serial_test = "0.4.0"
