[package]
name = "sp-runner"
version = "0.0.1"
authors = ["Kristofer Bengtsson <kristofer@sekvensa.se>"]
edition = "2018"

[features]
default = ["ros"]
ros = ["sp-ros/ros"]
sat_planner = ["cryptominisat"]

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
sp-domain = { path = "../sp-domain/" }
sp-ros = { path = "../sp-ros/"}
failure = "0.1.6"
failure_derive = "0.1.6"
chrono = { version = "0.4.9", features = ["serde"] }
guard_extraction = { git = "https://github.com/m-dahl/guard_extraction.git", rev = "84c7832" }
indoc = "0.3"
cryptominisat = { git = "https://github.com/Storyyeller/cryptominisat-rs.git", optional = true }

tokio = { version = "0.2", features = ["full"] }
futures = "0.3"

snap = "1"

[dev-dependencies]
serial_test = "0.4.0"
