[package]
name = "sp-runner"
version = "0.0.1"
authors = ["Kristofer Bengtsson <kristofer@sekvensa.se>"]
edition = "2018"

[features]
ros = ["sp-ros/ros"]

[dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.7"
sp-domain = { path = "../sp-domain/" }
sp-ros = { path = "../sp-ros/"}
failure = "0.1.6"
failure_derive = "0.1.6"
chrono = { version = "0.4.9", features = ["serde"] }
indoc = "0.3"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rayon = "1.5"

snap = "1"
