[package]
name = "cylinders"
version = "0.1.0"
authors = ["Martin Dahl <martin.dahl@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sp-domain = { path = "../../sp-domain/" }
sp-runner = { path = "../../sp-runner/" }
failure = "0.1.5"
