<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>sp_ui</name>
  <version>0.0.1</version>
  <description>An user interface to contorl and monitor SP</description>

  <maintainer email="kristofer.bengtsson@chalmers.se">endre_eros</maintainer>
  <license>no_license</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <test_depend>python3-pytest</test_depend>
  <export>

    <build_type>ament_python</build_type>
  </export>
</package>
