<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_dorna_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages for the ROS2 Dorna robot suite</description>
  <maintainer email="endre@chalmers.se">endre_eros</maintainer>
  <license>no_license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>builtin_interfaces</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <!-- <ros1_bridge mapping_rules="message_x_mapping_rules.yaml"/>
    <ros1_bridge mapping_rules="message_y_mapping_rules.yaml"/> -->
    <build_type>ament_cmake</build_type>
  </export>
</package>
